--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,6 @@
                     <iframe id="featured-video" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
-            
 
             <hr>
 
@@ -48,20 +47,18 @@
                 <div id="formations-grid" class="grid-container">
                     </div>
             </section>
-
-            
         </div>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Du concept à l'expertise - Auteur : Équipe RousselTM</p>
+            <p>© 2025 Du concept à l'expertise - Auteur : Équipe RousselTM</p>
         </div>
     </footer>
 
     <div id="login-modal" class="modal">
         <div class="modal-content">
-            <span class="close-button">&times;</span>
+            <span class="close-button">×</span>
             <h2>Bienvenue !</h2>
             <p>Veuillez entrer votre nom et votre email (facultatif) :</p>
             <form id="login-form">
@@ -79,7 +76,7 @@
 
     <div id="user-details-modal" class="modal">
         <div class="modal-content">
-            <span class="close-button">&times;</span>
+            <span class="close-button">×</span>
             <h2>Vos Informations</h2>
             <p><strong>Nom :</strong> <span id="modal-user-name"></span></p>
             <p><strong>Email :</strong> <span id="modal-user-email"></span></p>
